# dot-context

./: .context  AUTHORS.md  CHANGELOG.md  Footer_test.tsx  Makefile  README.md  file_importer.py  install.sh  main.py  requirements.txt  setup.cfg  test.py  watch.py
dotcontext/: __init__.py  __main__.py
dotcontext/run/: code_generator.py  context_manager.py  file_importer.py  main.py  prompt_constructor.py  test_prompt_constructor.py
dotcontext/watch/: main.py
dto/: code_executor.py  code_generator.py  context_manager.py  file_importer.py  main.py  prompt_constructor.py  test_prompt_constructor.py
example/vite/: index.html  package-lock.json  package.json
example/vite/src/: App.tsx
example/vite/src/components/: ChatArea.tsx  Footer.tsx  Footer.tsx.inst  Footer.tsx.instruct  Header.tsx  Header.tsx.inst  Header.tsx.instruct  TodoList.tsx
examples/vite/src/components/: Footer.tsx  Footer.tsx.instruct  Header.tsx  Header.tsx.instruct
vs-code-ext/dot-instruct/: CHANGELOG.md  LICENSE  README.md  dot-context-0.0.1.vsix  package-lock.json  package.json
vs-code-ext/dot-instruct/src/: extension.ts  language-configuration.json  previewProvider.ts
vs-code-ext/dot-instruct/syntaxes/: instruct.tmLanguage.json
