[metadata]
name = dotcontext
version = attr: dotcontext.__version__
author = Kevin Coleman
author_email = kevin@sparkstart.io
license = BSD
description = HTTPie: modern, user-friendly command-line HTTP client for the API era.
url = https://httpie.io/
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    GitHub = https://github.com/KevinColemanInc/dot-context
    Online Demo = https://github.com/KevinColemanInc/dot-context/docs/demo.mp4

[options]
packages = find:
install_requires =
    pip
    setuptools
    aiohappyeyeballs==2.4.0
    aiohttp==3.10.5
    aiosignal==1.3.1
    annotated-types==0.7.0
    anyio==4.4.0
    async-timeout==4.0.3
    attrs==24.2.0
    boto3==1.35.5
    boto3-stubs==1.35.5
    botocore==1.35.5
    botocore-stubs==1.35.5
    certifi==2024.7.4
    charset-normalizer==3.3.2
    exceptiongroup==1.2.2
    frozenlist==1.4.1
    greenlet==3.0.3
    h11==0.14.0
    httpcore==1.0.5
    httpx==0.27.0
    httpx-sse==0.4.0
    idna==3.8
    jmespath==1.0.1
    jsonpatch==1.33
    jsonpointer==3.0.0
    langchain==0.2.14
    langchain-core==0.2.34
    langchain-text-splitters==0.2.2
    langsmith==0.1.104
    multidict==6.0.5
    numpy==1.26.4
    octoai==1.6.0
    orjson==3.10.7
    packaging==24.1
    pydantic==2.8.2
    pydantic_core==2.20.1
    python-dateutil==2.9.0.post0
    PyYAML==6.0.2
    requests==2.32.3
    s3transfer==0.10.2
    six==1.16.0
    sniffio==1.3.1
    SQLAlchemy==2.0.32
    tenacity==8.5.0
    types-awscrt==0.21.2
    types-boto3==1.0.2
    types-s3transfer==0.10.1
    typing_extensions==4.12.2
    urllib3==2.2.2
    yarl==1.9.4

python_requires = >=3.11

[options.packages.find]
include =
    dotcontext
    dotcontext.run
    dotcontext.watch
    dotcontext.*

[options.entry_points]
console_scripts =
    dotcontext = dotcontext.__main__:main
